--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,4 +34,4 @@ models:
   my_new_project:
     # Applies to all files under models/example/
     example:
-      materialized: view
+      materialized: table
